    -plotregion (save what is visible or the entire canvas)

For gridlines:
    The dash pattern of the lines as an optional argument

For several plot and chart types:
    -box         Defines the part of the canvas that is reserved for the plot/chart
    -axesbox     Defines this part using the coordinate system of an existing plot
    -unit        Defines the size of a piechart's pie
    -reference   Defines the position of a piechart wrt an existing plot

For piecharts and spiral charts:
    Options for the circle segments: -outlinewidth, -outline,
    Options for the data: -shownumbers, -placement, -sorted, -shownumbers,
        -format, -formatright

For dots in an xy-plot:
    3D effect enabled via "$p dotconfig -3deffect 1"

For the text and labels along axes:
    The render option for the plotting style of a plot/chart with numerical
    axes can be set to "text", in which case superscript and subscript are
    possible.


Improvements and bugfixes:

- Method coordsToPixel now automatically handles the various coordinate systems

- Vertical text along the axis can be configured properly

- Proper configuration for logarithmic axes (no new command required)

- Improved colour computation for isolines and shades


Incompatibilities:

- The coordsToPixel command and related commands need the _alias name_ for the canvas,
  as there can be more than one plot or chart in a canvas. This is returned via the
  new "$plot canvas" subcommand.

- The default colour for the gridlines in polar plots has been changed to grey instead
  of black, as the black lines were too conspicuous


Known bugs and quirks:

- Some geometric computations concerning the margins for the plot area are
  off by one pixel. This is noticeable in the "demographic.tcl" example.

- The titles for individual plots are positioned with respect to the first plot.

- Not all plot and chart types support yet the -box and -axesbox or similar options.

- The documentation is not complete yet.